--- a/src/pages/docs/[...slug].astro
+++ b/src/pages/docs/[...slug].astro
@@ -1,14 +1,20 @@
 ---
 import DocsLayout from '../../layouts/DocsLayout.astro';
-import { getCollection } from 'astro:content';
+import { getCollection, type CollectionEntry } from 'astro:content';
 import { siteConfig } from '@/config';
 
+type DocsEntry = CollectionEntry<'docs'>;
+
 export async function getStaticPaths() {
-  const docs = await getCollection('docs', ({ data }) => !data.draft);
-  return docs.map((doc) => ({
+  const docs = await getCollection('docs', ({ data }: { data: DocsEntry['data'] }) => !data.draft);
+  return docs.map((doc: DocsEntry) => ({
     params: { slug: doc.slug },
     props: { doc },
   }));
+}
+
+interface Props {
+  doc: DocsEntry;
 }
 
 const { doc } = Astro.props;
